[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Sprites/Npc/PlataformaMovil/PlataformaMovilVerde3.png" type="Texture" id=1]
[ext_resource path="res://assets/Sprites/arrow.png" type="Texture" id=2]
[ext_resource path="res://game/Objects/AcceleratingPlatform.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.72, 6.95537 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 66.2317, 0.851002 )

[sub_resource type="Animation" id=3]
resource_name = "arrow_left"
length = 0.6
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 58, 0 ), Vector2( -58, 0 ), Vector2( 58, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arrow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.56, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -58, 0 ), Vector2( 58, 0 ), Vector2( -58, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arrow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.56, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="AcceleratingPlatform" type="KinematicBody2D"]
position = Vector2( 0.291992, 0 )
z_index = 36
collision_layer = 0
script = ExtResource( 3 )
direction = "right"
impulse = 350.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.09787, 1 )
texture = ExtResource( 1 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( -58, 0 )
rotation = 1.5708
scale = Vector2( 0.8, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.09879 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
modulate = Color( 0, 0.847059, 0.490196, 1 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, -6.83689 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/arrow_left = SubResource( 3 )
anims/arrow_right = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 129.509

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 9.38014, 4.50389 )
process_parent = true
physics_process_parent = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 10.1101, 4.97107 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
